# IUKM

./: .gitignore  README.md  pyproject.toml
.devcontainer/: devcontainer.json  docker-compose.yml
.devcontainer/environment/ubuntu/: Dockerfile  Dockerfile.gpu
src/: 10_cos_sim_calc_between_clause_vector_and_com.py  11_clause_filtering.py  12_create_pseudo_documents.py  13_create_document_representation.py  14_gaussian_bat.py  15_extract_native_words.py  16_topic_model.py  17_evaluate_topic_model.py  18_make_data.py  19_compair_proposed_method.py  1_sbert_fine_tuning_for_assembly_triple.py  20_evaluate_compair_proposed_method.py  2_embedded_by_sbert.py  3_reduce_dimension_by_umap.py  4_clustering.py  5_visualization.py  6_hierarchical_clustering.py  7_evaluate_ward_clustering.py  8_tf_idf.py  9_evaluate_tf_idf.py  main_bertopic.py  main_evaluation.py  main_intra_speaker.py  main_lda.py  main_make_data.py  sbert_fine_tuning_for_assembly_triple.py
src/codebase/computation/: calc_tf_idf.py  create_doc_representation.py
src/codebase/dataprocessor/: calculate_similarity.py  data_loder.py  data_split.py  get_info.py  input_format.py  janome_tokenizer.py  label_encoder.py  make_adjacency_pair.py  make_assembly_pairs_adj_triple.py  make_dict.py  make_dir.py  make_speaker_utterance_data.py  save_data.py  sudachi_tokenizer.py
src/codebase/model/: bertopic.py  gaussian_bat.py  lda.py  sentence_bert.py
src/codebase/trainer/: model_fit.py
